--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.10",
-    "angular-masonry": "~0.9.1"
+    "angular-masonry": "~0.9.1",
+    "google-maps-utility-library-v3": "*"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
