--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.10",
     "angular-masonry": "~0.9.1",
-    "google-maps-utility-library-v3": "*"
+    "google-maps-utility-library-v3": "*",
+    "angular-google-maps": "~2.0.6"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
